welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:41: error: not found: value faire2Droit
			faire2Droit(Color.blue)
                        ^